// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LightningFont overview 1`] = `
<DocumentFragment>
  <table
    class="css-1ea51ic-TableRowContainer"
  >
    <tbody>
      <tr
        class="css-k05zw2-BaseLightningFont"
      >
        <td>
          <div
            class="css-1n7kwax-BaseLightningFont"
          >
            <div
              class="css-pmiq22-BaseLightningFont"
            >
              $brand-accessible
            </div>
            <p
              class="css-3l5gpc-BaseLightningFont"
            >
               Dark variant of BRAND that is accessible with white
            </p>
          </div>
        </td>
        <td>
          <div
            class="css-1ubyhio-BaseLightningFont"
          >
            <div>
              BRAND_ACCESSIBLE
            </div>
          </div>
        </td>
        <td>
          <div
            style="text-align: right;"
          >
            2.6.0
          </div>
        </td>
        <td>
          <div
            style="text-align: center;"
          >
            Yes
          </div>
        </td>
        <td>
          <div
            style="display: flex; flex-direction: column; align-items: center;"
          >
            <div
              style="text-align: center; width: 1.5rem; height: 1.5rem; line-height: 1.5rem; font-size: .625rem; color: rgb(255, 255, 255); background-color: rgb(84, 196, 115);"
            >
              GA
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`LightningFont palette 1`] = `
<DocumentFragment>
  <table
    class="css-6q9zp4-LightningFontTheme"
  >
    <colgroup>
      <col
        span="1"
      />
      <col
        span="1"
      />
      <col
        span="1"
      />
      <col
        span="1"
      />
      <col
        span="1"
      />
    </colgroup>
    <thead>
      <tr>
        <th
          class="css-dre8ac"
        >
          Token
        </th>
        <th
          class="css-hv87u9"
        >
          Example
        </th>
        <th
          class="css-hv87u9"
        >
          Released
        </th>
        <th
          class="css-hv87u9"
        >
          Themeable
        </th>
        <th
          class="css-hv87u9"
        >
          Support
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="css-k05zw2-BaseLightningFont"
      >
        <td>
          <div
            class="css-1n7kwax-BaseLightningFont"
          >
            <div
              class="css-pmiq22-BaseLightningFont"
            >
              $brand-disabled
            </div>
            <p
              class="css-3l5gpc-BaseLightningFont"
            >
               Disabled state of BRAND_A11Y
            </p>
          </div>
        </td>
        <td>
          <div
            class="css-1ubyhio-BaseLightningFont"
          >
            <div>
              BRAND_DISABLED
            </div>
          </div>
        </td>
        <td>
          <div
            style="text-align: right;"
          >
            2.6.0
          </div>
        </td>
        <td>
          <div
            style="text-align: center;"
          >
            Yes
          </div>
        </td>
        <td>
          <div
            style="display: flex; flex-direction: column; align-items: center;"
          >
            <div
              style="text-align: center; width: 1.5rem; height: 1.5rem; line-height: 1.5rem; font-size: .625rem; color: rgb(255, 255, 255); background-color: rgb(84, 196, 115);"
            >
              GA
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="css-k05zw2-BaseLightningFont"
      >
        <td>
          <div
            class="css-1n7kwax-BaseLightningFont"
          >
            <div
              class="css-pmiq22-BaseLightningFont"
            >
              $brand-header
            </div>
            <p
              class="css-3l5gpc-BaseLightningFont"
            >
               Background color a branded app header
            </p>
          </div>
        </td>
        <td>
          <div
            class="css-1ubyhio-BaseLightningFont"
          >
            <div>
              PALETTE_GRAY_1
            </div>
          </div>
        </td>
        <td>
          <div
            style="text-align: right;"
          >
            2.6.0
          </div>
        </td>
        <td>
          <div
            style="text-align: center;"
          >
            Yes
          </div>
        </td>
        <td>
          <div
            style="display: flex; flex-direction: column; align-items: center;"
          >
            <div
              style="text-align: center; width: 1.5rem; height: 1.5rem; line-height: 1.5rem; font-size: .625rem; color: rgb(255, 255, 255); background-color: rgb(100, 136, 227);"
            >
              I
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="css-k05zw2-BaseLightningFont"
      >
        <td>
          <div
            class="css-1n7kwax-BaseLightningFont"
          >
            <div
              class="css-pmiq22-BaseLightningFont"
            >
              $brand-header-contrast
            </div>
            <p
              class="css-3l5gpc-BaseLightningFont"
            >
               Variant of BRAND_HEADER that is accessible with BRAND_HEADER
            </p>
          </div>
        </td>
        <td>
          <div
            class="css-1ubyhio-BaseLightningFont"
          >
            <div>
              BRAND_HEADER_CONTRAST
            </div>
          </div>
        </td>
        <td>
          <div
            style="text-align: right;"
          >
            2.6.0
          </div>
        </td>
        <td>
          <div
            style="text-align: center;"
          >
            Yes
          </div>
        </td>
        <td>
          <div
            style="display: flex; flex-direction: column; align-items: center;"
          >
            <div
              style="text-align: center; width: 1.5rem; height: 1.5rem; line-height: 1.5rem; font-size: .625rem; color: rgb(255, 255, 255); background-color: rgb(100, 136, 227);"
            >
              I
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="css-k05zw2-BaseLightningFont"
      >
        <td>
          <div
            class="css-1n7kwax-BaseLightningFont"
          >
            <div
              class="css-pmiq22-BaseLightningFont"
            >
              $brand-header-contrast-warm
            </div>
            <p
              class="css-3l5gpc-BaseLightningFont"
            >
               Variant of BRAND_HEADER_CONTRAST that provides a warm color
            </p>
          </div>
        </td>
        <td>
          <div
            class="css-1ubyhio-BaseLightningFont"
          >
            <div>
              BRAND_HEADER_CONTRAST_WARM
            </div>
          </div>
        </td>
        <td>
          <div
            style="text-align: right;"
          >
            2.6.0
          </div>
        </td>
        <td>
          <div
            style="text-align: center;"
          >
            Yes
          </div>
        </td>
        <td>
          <div
            style="display: flex; flex-direction: column; align-items: center;"
          >
            <div
              style="text-align: center; width: 1.5rem; height: 1.5rem; line-height: 1.5rem; font-size: .625rem; color: rgb(255, 255, 255); background-color: rgb(100, 136, 227);"
            >
              I
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="css-k05zw2-BaseLightningFont"
      >
        <td>
          <div
            class="css-1n7kwax-BaseLightningFont"
          >
            <div
              class="css-pmiq22-BaseLightningFont"
            >
              $brand-primary
            </div>
            <p
              class="css-3l5gpc-BaseLightningFont"
            >
               Primary brand color
            </p>
          </div>
        </td>
        <td>
          <div
            class="css-1ubyhio-BaseLightningFont"
          >
            <div>
              BRAND_PRIMARY
            </div>
          </div>
        </td>
        <td>
          <div
            style="text-align: right;"
          >
            2.6.0
          </div>
        </td>
        <td>
          <div
            style="text-align: center;"
          >
            Yes
          </div>
        </td>
        <td>
          <div
            style="display: flex; flex-direction: column; align-items: center;"
          >
            <div
              style="text-align: center; width: 1.5rem; height: 1.5rem; line-height: 1.5rem; font-size: .625rem; color: rgb(255, 255, 255); background-color: rgb(84, 196, 115);"
            >
              GA
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
